--- a/tex/motivation.tex
+++ b/tex/motivation.tex
@@ -11,7 +11,7 @@
 		\includegraphics[width=1.5in, height=1in]{static_acc.pdf}
 		\label{fig:static-acc}
 	}
-	\caption{The recall ratios and the impacts on model generation quality of the static pre-identification method (SPI) under various important token retention percentages. `ORI' denotes the baseline where the SPI method is not applied.}
+	\caption{The recall ratios and the impacts on model generation quality of the static pre-identification method (SPI) under various important token retention percentages. ``ORI''  denotes the baseline where the SPI method is not applied.}
 	\label{fig:static_methods}
 \end{figure}
 \zrdnew{To satisfy the dual requirements of scalable storage capacity and low retrieval latency established in \S\ref{sec:limit}, we propose HyperInfer.
