--- a/impress_extend.tex
+++ b/impress_extend.tex
@@ -77,7 +77,7 @@
 \newcommand{\wj}[1]{\textcolor{black}{#1}}
 \newcommand{\xz}[1]{\textcolor{red}{#1}}
 \newcommand{\he}[1]{\textcolor{blue}{#1}}
-\newcommand{\ysl}[1]{\textcolor{black}{#1}}
+\newcommand{\ysl}[1]{\textcolor{blue}{#1}}
 \newcommand{\fv}[1]{\textcolor{black}{#1}}
 \newcommand{\fvc}[1]{\textcolor{black}{#1}}
 \newcommand{\zrd}[1]{\textcolor{orange}{#1}}
