--- a/tex/design_new.tex
+++ b/tex/design_new.tex
@@ -10,10 +10,18 @@
 %	{Important token indices exhibit strong consistency across adjacent layers of an LLM.} To further analyze the distribution of important token indices, we examine the similarity of the top 25\% important token sets across adjacent layers for different models. As shown in Figure~\ref{fig:ob3}(a), there are two key observations: (1) the important tokens exhibit strong consistency across layers, and (2) tokens with higher importance in one layer are more likely to remain important in the subsequent layer.
 The sets of important token indices are highly similar between adjacent transformer layers.}
 
-\zrdnew{To quantify this, we compute the similarity between important token index sets across adjacent Transformer layers for several OPT models. In each layer, we select the top 25\% of tokens ranked by their attention-based importance scores, and measure the similarity between this index set and that of the next layer using the Jaccard index~\cite{jaccard-18}. As shown in Figure~\ref{fig:sim_layer}, each bar represents the similarity between two neighboring layers. We find that similarity values are consistently bounded within a relatively tight interval, with the sampled OPT-6.7B model exhibiting similarities across layers that largely fall between 0.40 and 0.85, and an average similarity of 0.48. This indicates that the attention heads in neighboring layers tend to focus on similar token positions. }
 
+\ysl{
+To understand the nature of inter-layer consistency in token importance, we examine it from two complementary perspectives.  First, we assess the \textit{overlap} of important tokens between adjacent layers. For several OPT models, we select the top 25\% of tokens in each layer based on attention-based importance scores and compute the Jaccard similarity~\cite{jaccard-18} between these sets in neighboring layers. As shown in Figure~\ref{fig:sim_layer}, the similarity consistently falls within a narrow range—e.g., for OPT-6.7B, values span from 0.40 to 0.85 with an average of 0.48—indicating that adjacent layers largely agree on which tokens are important.}
 
-\zrdnew{Furthermore, we find that tokens that are more important in one layer tend to remain important in the next layer. As shown in Figure~\ref{fig:layer_wise_r}, we first rank all tokens in each layer by their importance and take the top 25\% as important tokens. Within this important set, we further partition token positions into finer bins according to their relative importance percentiles (e.g., the ``0--20'' bin represents the top 20\% most critical tokens within this set). For each bin, we then measure the recall ratio of important tokens in the next layer, defined as the fraction of tokens in that bin which are still classified as important in the subsequent layer. The resulting curves show that bins containing tokens with higher importance in the current layer consistently achieve larger recall ratios, and all models and datasets exhibit the same overall trend.}
+\ysl{Second, we investigate how \textit{relative importance rankings} propagate across layers. Within the top 25\% important tokens of each layer, we partition positions into finer groups by their percentile rank (e.g., the highest group contains the top 20\% most critical tokens in this set). For each group, we measure its recall in the next layer—the fraction of tokens that remain in the top 25\%. As shown in Figure~\ref{fig:layer_wise_r}, tokens with higher importance in the current layer consistently exhibit higher recall, and this trend holds across all models and datasets.}
+
+\ysl{Together, these results reveal that token importance is not only shared across layers but also preserved in rank order—providing a strong foundation for cross-layer prefetching strategies.}
+
+%\zrdnew{To quantify this, we compute the similarity between important token index sets across adjacent Transformer layers for several OPT models. In each layer, we select the top 25\% of tokens ranked by their attention-based importance scores, and measure the similarity between this index set and that of the next layer using the Jaccard index~\cite{jaccard-18}. As shown in Figure~\ref{fig:sim_layer}, each bar represents the similarity between important token sets of  two adjacent layers. We find that similarity values are consistently bounded within a relatively tight interval, with the sampled OPT-6.7B model exhibiting similarities across layers that largely fall between 0.40 and 0.85, and an average similarity of 0.48. This indicates that the attention heads in adjacent layers tend to focus on similar token positions. }
+%
+%
+%\zrdnew{Furthermore, we find that tokens that are more important in one layer tend to remain important in the next layer. As shown in Figure~\ref{fig:layer_wise_r}, we first rank all tokens in each layer by their importance and take the top 25\% as important tokens. Within this important set, we further partition token positions into finer bins according to their relative importance percentiles (e.g., the ``0--20'' bin represents the top 20\% most critical tokens within this set). For each bin, we then measure the recall ratio of important tokens in the next layer, defined as the fraction of tokens in that bin which are still classified as important in the subsequent layer. The resulting curves show that bins containing tokens with higher importance in the current layer consistently achieve larger recall ratios, and all models and datasets exhibit the same overall trend.}
 
 
 
